fixing spacing on mobile

--- a/style.css
+++ b/style.css
@@ -95,8 +95,8 @@ h1 {
     background-size: 100% 100%;
     width: 143px;
     height: 200px;
-    margin: 50px 25px;
-    padding: 25px 25px;
+    margin: 50px 20px;
+    padding: 25px 20px;
     display: inline-block;
     transition: all 0.2s ease-out;
     justify-content: center;
